# vigilus-icb

./: .env.example  .env.production.example  .gitignore  MLX_LM_OPTIMIZATION_INDEX.md  OPTIMIZATION_CODE_EXAMPLES.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.txt  PIANO.md  README.md  README_OPTIMIZATION_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml  mlx_lm_optimization_analysis.md  render.yaml
backend/: .coverage  .dockerignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: ce109531ee60_initial_schema.py
backend/sentinella/: __init__.py  config.py  db.py  main.py  scheduler.py
backend/sentinella/api/: __init__.py  cache.py  compare.py  convergence.py  correlations.py  digest.py  dimensions.py  events.py  export.py  headlines.py  layers.py  map.py  methodology.py  narrative.py  osint.py  regional.py  score.py  sources.py  trending.py  websocket.py
backend/sentinella/collectors/: __init__.py  acled.py  adsb.py  base.py  cache.py  csirt.py  gdelt.py  google_trends.py  ingv.py  mega_rss.py  news_rss.py
backend/sentinella/engine/: __init__.py  baseline.py  dimensions.py  normalizer.py  score.py  trending.py
backend/sentinella/middleware/: __init__.py  auth.py  rate_limit.py
backend/sentinella/models/: __init__.py  event.py  score.py  source.py
backend/sentinella/nlp/: __init__.py  classifier.py  tfidf_classifier.py
backend/sentinella/scripts/: seed_baseline.py
backend/tests/: conftest.py
backend/tests/test_api/: test_edge_cases.py  test_endpoints.py  test_features.py  test_middleware.py
backend/tests/test_collectors/: test_all_collectors.py  test_base.py  test_cache.py  test_http_mocks.py
backend/tests/test_engine/: test_baseline.py  test_config.py  test_dimensions.py  test_normalizer.py  test_score_cycle.py  test_trending.py
boomer-assistant/: .gitignore  README.md  index.html  package-lock.json  package.json  (+1 more)
boomer-assistant/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
boomer-assistant/src-tauri/capabilities/: main.json
boomer-assistant/src-tauri/src/: lib.rs  main.rs
boomer-assistant/src-tauri/src/commands/: audio.rs  mod.rs  shell.rs  system.rs  voice.rs
(+74 files in other folders)
