[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinella"]

[project]
name = "vigilus"
version = "1.0.0"
description = "VIGILUS — Italy Crisis Board. Real-time OSINT intelligence dashboard."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "redis>=5.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pytrends>=4.9",
    "spacy>=3.7",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "lxml>=5.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sentinella"]
omit = [
    "sentinella/scripts/*",
    "sentinella/main.py",
    "sentinella/scheduler.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "def __repr__",
]
