[package]
name = "boomer-assistant"
version = "0.1.0"
description = "Un assistente desktop per persone non tecniche"
authors = ["Italy Security Board"]
edition = "2021"

[lib]
name = "boomer_assistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whisper-rs = "0.12"
hound = "3.5"
cpal = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
